# attention-firewall

notification-bridge/: .gitignore  README.md  main.py  pyproject.toml
notification-bridge/examples/: notification-bridge.service
notification-bridge/notification_bridge/: __init__.py  core.py  server.py
notification-bridge/notification_bridge/listeners/: base.py  linux.py  windows.py
notification-bridge/tests/: test_core.py
notification_bridge/: .gitignore  main.py
notification_bridge/listeners/: __init__.py
tests/: __init__.py  test_listeners.py  test_server.py
